[project]
name = "ySV"
version = "0.1.0"
authors = [
    {name = "Matheus Romaneli", email = "mlima1324@gmail.com"},
]
description = "implementation tool to fuzz testing SV protocol in Python"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "ruff==0.6.1",
  "mypy==1.11.1",
  "pytest==8.3.2",
  "pytest-cov==5.0.0",
]

[project.urls]
"Homepage" = "https://github.com/YSMART-Projects/ySV"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "FA102"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "D"]

[tool.mypy]
exclude = ["build", "venv"]
strict = true

[tool.pytest.ini_options]
addopts = "--cov=ysv --cov-report term --cov-report html"

[tool.coverage.report]
show_missing = true
skip_empty = true
# fail_under = 80
sort = "cover"